// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test form with checkbox 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-checkbox__wrap\\">
    <div class=\\"var-checkbox\\">
      <div class=\\"var-checkbox__action var-checkbox--unchecked var-checkbox--disabled\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition: transform 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
      <div class=\\"var-checkbox__text var-checkbox--disabled\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with checkbox 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-checkbox__wrap\\">
    <div class=\\"var-checkbox\\">
      <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition: transform 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
      <div class=\\"var-checkbox__text\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with checkbox 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-checkbox__wrap\\">
    <div class=\\"var-checkbox\\">
      <div class=\\"var-checkbox__action var-checkbox--unchecked var-checkbox--error\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition: transform 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
      <div class=\\"var-checkbox__text var-checkbox--error\\"></div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <div>必须勾选</div>
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with checkbox 4`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-checkbox__wrap\\">
    <div class=\\"var-checkbox\\">
      <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition: transform 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
      <div class=\\"var-checkbox__text\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with counter 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-counter var--box\\">
    <div class=\\"var-counter__controller var-elevation--2 var-counter--disabled\\"><i class=\\"var-icon var-icon--set var-icon-minus var-counter__decrement-button var-counter--not-allowed\\" style=\\"transition: transform 0ms;\\" var-counter-cover=\\"\\"></i><input class=\\"var-counter__input var-counter--not-allowed\\" inputmode=\\"numeric\\" disabled=\\"\\"><i class=\\"var-icon var-icon--set var-icon-plus var-counter__increment-button var-counter--not-allowed\\" style=\\"transition: transform 0ms;\\" var-counter-cover=\\"\\"></i></div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with counter 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-counter var--box\\">
    <div class=\\"var-counter__controller var-elevation--2\\"><i class=\\"var-icon var-icon--set var-icon-minus var-counter__decrement-button\\" style=\\"transition: transform 0ms;\\" var-counter-cover=\\"\\"></i><input class=\\"var-counter__input\\" inputmode=\\"numeric\\" readonly=\\"\\"><i class=\\"var-icon var-icon--set var-icon-plus var-counter__increment-button\\" style=\\"transition: transform 0ms;\\" var-counter-cover=\\"\\"></i></div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with counter 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-counter var--box\\">
    <div class=\\"var-counter__controller var-elevation--2 var-counter--error\\"><i class=\\"var-icon var-icon--set var-icon-minus var-counter__decrement-button\\" style=\\"transition: transform 0ms;\\" var-counter-cover=\\"\\"></i><input class=\\"var-counter__input\\" inputmode=\\"numeric\\" readonly=\\"\\"><i class=\\"var-icon var-icon--set var-icon-plus var-counter__increment-button\\" style=\\"transition: transform 0ms;\\" var-counter-cover=\\"\\"></i></div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <div>必须大于0</div>
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with counter 4`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-counter var--box\\">
    <div class=\\"var-counter__controller var-elevation--2\\"><i class=\\"var-icon var-icon--set var-icon-minus var-counter__decrement-button\\" style=\\"transition: transform 0ms;\\" var-counter-cover=\\"\\"></i><input class=\\"var-counter__input\\" inputmode=\\"numeric\\" readonly=\\"\\"><i class=\\"var-icon var-icon--set var-icon-plus var-counter__increment-button\\" style=\\"transition: transform 0ms;\\" var-counter-cover=\\"\\"></i></div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller var-input--disabled\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input var-input--disabled\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--disabled var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line var-input--line-disabled\\">
      <div class=\\"var-input__dot var-input--line-disabled\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller var-input--error\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input var-input--caret-error\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--error var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line var-input--line-error\\">
      <div class=\\"var-input__dot var-input--line-error\\"></div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <div>不能为空</div>
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 4`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with radio 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-radio__wrap\\">
    <div class=\\"var-radio\\">
      <div class=\\"var-radio__action var-radio--unchecked var-radio--disabled\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
      <div class=\\"var-radio__text var-radio--disabled\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with radio 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-radio__wrap\\">
    <div class=\\"var-radio\\">
      <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
      <div class=\\"var-radio__text\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with radio 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-radio__wrap\\">
    <div class=\\"var-radio\\">
      <div class=\\"var-radio__action var-radio--unchecked var-radio--error\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
      <div class=\\"var-radio__text var-radio--error\\"></div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <div>必须勾选</div>
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with radio 4`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-radio__wrap\\">
    <div class=\\"var-radio\\">
      <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
      <div class=\\"var-radio__text\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with rate 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-rate__wrap\\">
    <div class=\\"var-rate\\">
      <div class=\\"var-rate__content var-rate--disabled\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div class=\\"var-rate__content var-rate--disabled\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div class=\\"var-rate__content var-rate--disabled\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div class=\\"var-rate__content var-rate--disabled\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div style=\\"margin-right: 0px;\\" class=\\"var-rate__content var-rate--disabled\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with rate 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-rate__wrap\\">
    <div class=\\"var-rate\\">
      <div class=\\"var-rate__content var-rate--error\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div class=\\"var-rate__content var-rate--error\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div class=\\"var-rate__content var-rate--error\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div class=\\"var-rate__content var-rate--error\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div style=\\"margin-right: 0px;\\" class=\\"var-rate__content var-rate--error\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <div>必须大于0</div>
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with rate 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-rate__wrap\\">
    <div class=\\"var-rate\\">
      <div class=\\"var-rate__content\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div class=\\"var-rate__content\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div class=\\"var-rate__content\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div class=\\"var-rate__content\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
      <div style=\\"margin-right: 0px;\\" class=\\"var-rate__content\\"><i class=\\"var-icon var-icon--set var-icon-star-outline var-rate__content-icon\\" style=\\"transition: transform 0ms;\\" var-rate-cover=\\"\\"></i></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with select 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-select var--box var-select--disabled\\">
    <div class=\\"var-select__controller var-select--disabled\\">
      <div class=\\"var-select__icon\\"></div>
      <div class=\\"var-select__wrap\\">
        <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
          <div class=\\"var-select__select var-select--disabled\\" style=\\"text-align: left;\\">
            <div>
              <div class=\\"var-select__chips\\">
                <transition-stub><span class=\\"var-chip var--box var-chip--small var--inline-flex var-chip--default var-chip--round var-select__chip\\" var-select-cover=\\"\\"><span class=\\"var-chip__text-small\\">选项1</span><span class=\\"var-chip--close\\"><i class=\\"var-icon var-icon--set var-icon-close-circle\\" style=\\"transition: transform 0ms;\\"></i></span></span></transition-stub>
              </div>
            </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
          </div><label class=\\"var-select__placeholder var--ellipsis var-select--disabled var-select--placeholder-hint\\"></label>
          <!--teleport start-->
          <!--teleport end-->
        </div>
      </div>
      <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-select__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\"></i></div>
    </div>
    <div class=\\"var-select__line var-select--line-disabled\\">
      <div class=\\"var-select__dot var-select--line-disabled\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with select 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-select var--box\\">
    <div class=\\"var-select__controller\\">
      <div class=\\"var-select__icon\\"></div>
      <div class=\\"var-select__wrap\\">
        <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
          <div class=\\"var-select__select\\" style=\\"text-align: left;\\">
            <div>
              <div class=\\"var-select__chips\\">
                <transition-stub><span class=\\"var-chip var--box var-chip--small var--inline-flex var-chip--default var-chip--round var-select__chip\\" var-select-cover=\\"\\"><span class=\\"var-chip__text-small\\">选项1</span><span class=\\"var-chip--close\\"><i class=\\"var-icon var-icon--set var-icon-close-circle\\" style=\\"transition: transform 0ms;\\"></i></span></span></transition-stub>
              </div>
            </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
          </div><label class=\\"var-select__placeholder var--ellipsis var-select--placeholder-hint\\"></label>
          <!--teleport start-->
          <!--teleport end-->
        </div>
      </div>
      <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-select__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\"></i></div>
    </div>
    <div class=\\"var-select__line\\">
      <div class=\\"var-select__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with select 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-select var--box\\">
    <div class=\\"var-select__controller var-select--error\\">
      <div class=\\"var-select__icon\\"></div>
      <div class=\\"var-select__wrap\\">
        <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
          <div class=\\"var-select__select var-select--error\\" style=\\"text-align: left;\\">
            <div>
              <div class=\\"var-select__chips\\">
                <transition-stub><span class=\\"var-chip var--box var-chip--small var--inline-flex var-chip--danger var-chip--round var-select__chip\\" var-select-cover=\\"\\"><span class=\\"var-chip__text-small\\">选项1</span><span class=\\"var-chip--close\\"><i class=\\"var-icon var-icon--set var-icon-close-circle\\" style=\\"transition: transform 0ms;\\"></i></span></span></transition-stub>
              </div>
            </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
          </div><label class=\\"var-select__placeholder var--ellipsis var-select--error var-select--placeholder-hint\\"></label>
          <!--teleport start-->
          <!--teleport end-->
        </div>
      </div>
      <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-select__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\"></i></div>
    </div>
    <div class=\\"var-select__line var-select--line-error\\">
      <div class=\\"var-select__dot var-select--line-error\\"></div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <div>选择必须多于1个</div>
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with select 4`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-select var--box\\">
    <div class=\\"var-select__controller\\">
      <div class=\\"var-select__icon\\"></div>
      <div class=\\"var-select__wrap\\">
        <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
          <div class=\\"var-select__select\\" style=\\"text-align: left;\\">
            <div>
              <div class=\\"var-select__chips\\"></div>
            </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
          </div><label class=\\"var-select__placeholder var--ellipsis\\"></label>
          <!--teleport start-->
          <!--teleport end-->
        </div>
      </div>
      <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-select__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\"></i></div>
    </div>
    <div class=\\"var-select__line\\">
      <div class=\\"var-select__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with slider 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-slider\\">
    <div class=\\"var-slider__block var-slider--disabled\\">
      <div class=\\"var-slider__track\\">
        <div class=\\"var-slider__track-background\\"></div>
        <div class=\\"var-slider__track-fill\\" style=\\"width: 5%; left: 0%;\\"></div>
      </div>
      <div class=\\"var-slider__thumb\\" style=\\"left: 5%;\\">
        <div class=\\"var-slider__thumb-block\\"></div>
        <div class=\\"var-slider__thumb-ripple\\"></div>
        <div class=\\"var-slider__thumb-label\\"><span>5</span></div>
      </div>
    </div>
    <transition-stub class=\\"var-slider__form\\" var-slider-cover=\\"\\">
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with slider 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-slider\\">
    <div class=\\"var-slider__block var-slider--error\\">
      <div class=\\"var-slider__track\\">
        <div class=\\"var-slider__track-background\\"></div>
        <div class=\\"var-slider__track-fill\\" style=\\"width: 5%; left: 0%;\\"></div>
      </div>
      <div class=\\"var-slider__thumb\\" style=\\"left: 5%;\\">
        <div class=\\"var-slider__thumb-block\\"></div>
        <div class=\\"var-slider__thumb-ripple\\"></div>
        <div class=\\"var-slider__thumb-label\\"><span>5</span></div>
      </div>
    </div>
    <transition-stub class=\\"var-slider__form\\" var-slider-cover=\\"\\">
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <div>必须大于10</div>
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with slider 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-slider\\">
    <div class=\\"var-slider__block\\">
      <div class=\\"var-slider__track\\">
        <div class=\\"var-slider__track-background\\"></div>
        <div class=\\"var-slider__track-fill\\" style=\\"width: 0%; left: 0%;\\"></div>
      </div>
      <div class=\\"var-slider__thumb\\" style=\\"left: 0%;\\">
        <div class=\\"var-slider__thumb-block\\"></div>
        <div class=\\"var-slider__thumb-ripple\\"></div>
        <div class=\\"var-slider__thumb-label\\"><span>0</span></div>
      </div>
    </div>
    <transition-stub class=\\"var-slider__form\\" var-slider-cover=\\"\\">
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with switch 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-switch\\">
    <div class=\\"var-switch__block var-switch--disabled\\">
      <div style=\\"filter: brightness(.6);\\" class=\\"var-switch__track\\"></div>
      <div class=\\"var-switch__ripple\\" style=\\"color: rgb(153, 153, 153);\\">
        <div class=\\"var-switch__handle var-elevation--2\\">
          <!--v-if-->
        </div>
      </div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with switch 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-switch\\">
    <div class=\\"var-switch__block\\">
      <div style=\\"\\" class=\\"var-switch__track var-switch__track--error\\"></div>
      <div class=\\"var-switch__ripple\\" style=\\"color: rgb(153, 153, 153);\\">
        <div class=\\"var-switch__handle var-elevation--2 var-switch__handle--error\\">
          <!--v-if-->
        </div>
      </div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <div>您必须开启</div>
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with switch 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-switch\\">
    <div class=\\"var-switch__block\\">
      <div style=\\"filter: brightness(.6);\\" class=\\"var-switch__track\\"></div>
      <div class=\\"var-switch__ripple\\" style=\\"color: rgb(153, 153, 153);\\">
        <div class=\\"var-switch__handle var-elevation--2\\">
          <!--v-if-->
        </div>
      </div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with uploader 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-uploader var--box\\">
    <div class=\\"var-uploader__file-list\\">
      <div class=\\"var-uploader__action var-elevation--2 var-uploader--disabled\\"><input class=\\"var-uploader__action-input\\" type=\\"file\\" accept=\\"image/*\\" disabled=\\"\\"><i class=\\"var-icon var-icon--set var-icon-plus var-uploader__action-icon\\" style=\\"transition: transform 0ms;\\" var-uploader-cover=\\"\\"></i></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
    <transition-stub>
      <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
        <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with uploader 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-uploader var--box\\">
    <div class=\\"var-uploader__file-list\\">
      <div class=\\"var-uploader__action var-elevation--2\\"><input class=\\"var-uploader__action-input\\" type=\\"file\\" accept=\\"image/*\\" disabled=\\"\\"><i class=\\"var-icon var-icon--set var-icon-plus var-uploader__action-icon\\" style=\\"transition: transform 0ms;\\" var-uploader-cover=\\"\\"></i></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
    <transition-stub>
      <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
        <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with uploader 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-uploader var--box\\">
    <div class=\\"var-uploader__file-list\\">
      <div class=\\"var-uploader__action var-elevation--2\\"><input class=\\"var-uploader__action-input\\" type=\\"file\\" accept=\\"image/*\\" disabled=\\"\\"><i class=\\"var-icon var-icon--set var-icon-plus var-uploader__action-icon\\" style=\\"transition: transform 0ms;\\" var-uploader-cover=\\"\\"></i></div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__error-message\\">
          <transition-stub>
            <div>至少上传一个</div>
          </transition-stub>
        </div>
        <div class=\\"var-form-details__extra-message\\">
          <transition-stub>
            <!--v-if-->
          </transition-stub>
        </div>
      </div>
    </transition-stub>
    <transition-stub>
      <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
        <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with uploader 4`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-uploader var--box\\">
    <div class=\\"var-uploader__file-list\\">
      <div class=\\"var-uploader__action var-elevation--2\\"><input class=\\"var-uploader__action-input\\" type=\\"file\\" accept=\\"image/*\\" disabled=\\"\\"><i class=\\"var-icon var-icon--set var-icon-plus var-uploader__action-icon\\" style=\\"transition: transform 0ms;\\" var-uploader-cover=\\"\\"></i></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
    <transition-stub>
      <div class=\\"var--box var-popup\\" style=\\"z-index: 1998; display: none;\\">
        <div class=\\"var-popup__overlay\\" style=\\"z-index: 1999;\\"></div>
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
    </transition-stub>
  </div>
</div>"
`;
